@@ -8,5 +8,5 @@ setConditionFormula(condition, 0.3, -24, 0.3, -24)
 setCombatCondition(combat, condition)
 
 function onCastSpell(cid, var)
-	doCombat(cid, combat, var)
+	return doCombat(cid, combat, var)
 end
